KQED -/src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Segment_Age_Range__c</fullName>
        <inlineHelpText>Each sub campaign may be geared toward a certain segmented age range, please choose the appropriate range.</inlineHelpText>
        <label>Segment Age Range</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12-17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18-24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25-29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30-34</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35-39</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40-44</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45-49</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50-54</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>55-59</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60-64</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>65-74</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Segment_Gender__c</fullName>
        <inlineHelpText>Sub campaign programs may choose to segment based on gender, please choose the gender when creating the program if applicable.</inlineHelpText>
        <label>Segment Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Segment_Notes__c</fullName>
        <inlineHelpText>Segment Notes test</inlineHelpText>
        <label>Segment Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Segment_for_the_Project__c</fullName>
        <description>3 digit segment code in TA which is used for acquisition mail source, for pledge the segment refers to the &apos;break&apos; of that day, 003 would be the third break that day.</description>
        <inlineHelpText>3 digit segment code in TA which is used for acquisition mail source, for pledge the segment refers to the &apos;break&apos; of that day, 003 would be the third break that day.   008 and 009 are used for Telemarketing, 999 is for Web.</inlineHelpText>
        <label>Segment for the Project</label>
        <picklist>
            <picklistValues>
                <fullName>001 Break</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>002 Break</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>003 Break</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>004 Break</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>005 Break</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>006 Break</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>007 Break</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>008 Telemarketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>009 Telemarketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>999 Web</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Segment_for_the_Project_old__c</fullName>
        <description>3 digit segment code in TA which is used for acquisition mail source, for pledge the segment refers to the &apos;break&apos; of that day, 003 would be the third break that day.</description>
        <inlineHelpText>3 digit segment code in TA which is used for acquisition mail source, for pledge the segment refers to the &apos;break&apos; of that day, 003 would be the third break that day.   008 and 009 are used for Telemarketing, 999 is for Web.</inlineHelpText>
        <label>Segment for the Project_old</label>
        <picklist>
            <picklistValues>
                <fullName>001 Break</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>002 Break</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>003 Break</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>004 Break</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>005 Break</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>006 Break</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>007 Break</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>008 Telemarketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>009 Telemarketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>999 Web</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Show_Breaks__c</fullName>
        <inlineHelpText>Please identify how many breaks will be associated to this sub program in total.</inlineHelpText>
        <label>Show Breaks</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Social_Networking_Date__c</fullName>
        <inlineHelpText>When does the Social Networking marketing start?</inlineHelpText>
        <label>Social Networking Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Solicitation_Type__c</fullName>
        <label>Solicitation Type</label>
        <picklist>
            <controllingField>Giving_Segment__c</controllingField>
            <picklistValues>
                <fullName>Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lapsed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejoin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complimentary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Solicitation_Type_old__c</fullName>
        <label>Solicitation Type_old</label>
        <picklist>
            <picklistValues>
                <fullName>Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lapsed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejoin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source_Code_Character_4__c</fullName>
        <formula>if(ISPICKVAL( Product_Program__c, &quot;Membership&quot;),

 Case(Campaign_Name__c,
&quot;ANNUAL&quot;,&quot;A&quot;,
&quot;EVENTS&quot;,&quot;E&quot;,
&quot;MATCHING GIFT&quot;,&quot;G&quot;,
&quot;IN KIND&quot;,&quot;K&quot;,
&quot;SALES&quot;,&quot;S&quot;, &quot;&quot;), 


 Case(Product_Program__c,&quot;MAJOR GIFT&quot;,&quot;M&quot;,
&quot;AUCTION&quot;,&quot;D&quot;,
&quot;CULTIVATION&quot;,&quot;C&quot;,
&quot;STEWARDSHIP&quot;,&quot;C&quot;,
&quot;SURVEY&quot;,&quot;P&quot;, &quot;&quot;))</formula>
        <label>Source Code Character 4</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Code_For_Station__c</fullName>
        <description>Used to define the first 3 characters of the Source Code</description>
        <formula>case( Station__c,
&quot;WGBH&quot;,&quot;GBH&quot;,
&quot;WGBY&quot;,&quot;GBY&quot;,
&quot;WCAI&quot;,&quot;CAI&quot;,
&quot;ACADEMY OF MUSIC&quot;,&quot;AOM&quot;,
&quot;CLASSICAL RADIO&quot;,&quot;GBH&quot;, 
&quot;&quot;)</formula>
        <label>Source Code Station</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Code__c</fullName>
        <inlineHelpText>Source code from TA campaigns</inlineHelpText>
        <label>Source Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Code_old__c</fullName>
        <inlineHelpText>Source code from TA campaigns</inlineHelpText>
        <label>Source Code_old</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Start_Time_Date__c</fullName>
        <inlineHelpText>Start Date and Time of the Overall Program</inlineHelpText>
        <label>Start Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Time_Date_old__c</fullName>
        <label>Start Time &amp; Date_old</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Station__c</fullName>
        <inlineHelpText>The radio/tv station call letters that the campaign is representing.</inlineHelpText>
        <label>Station</label>
        <picklist>
            <picklistValues>
                <fullName>KCRW</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>WCAI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academy of Music</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Station_old__c</fullName>
        <inlineHelpText>The radio/tv station call letters that the campaign is representing.</inlineHelpText>
        <label>Station_old</label>
        <picklist>
            <picklistValues>
                <fullName>WGBH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WCAI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academy of Music</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classical Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Programming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sub_Channel__c</fullName>
        <inlineHelpText>Sub Channel is a descriptor of the Channel</inlineHelpText>
        <label>Sub Channel</label>
        <picklist>
            <controllingField>Channel_Technique__c</controllingField>
            <picklistValues>
                <fullName>.org</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>44</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>57</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>89.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>99.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>App</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCTV Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Create</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KIDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learning Tour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Micro-Sites (Landing Pages)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Movie Theater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay Per Click</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Streaming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twitter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Channel_old__c</fullName>
        <inlineHelpText>Sub Channel is a descriptor of the Channel</inlineHelpText>
        <label>Sub Channel_old</label>
        <picklist>
            <controllingField>Channel_Technique_old__c</controllingField>
            <picklistValues>
                <fullName>.org</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>44</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>57</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>89.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>99.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cape</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Create</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>external sites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iTV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PayPerClick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Types of Post Cards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>World</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject_Title__c</fullName>
        <label>Subject/Title</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Designation__c</fullName>
        <description>The designation by donor of where the funds are to be applied.  Will be a look up relationship from the gift entry, there will be an override.</description>
        <inlineHelpText>The designation by donor of where the funds are to be applied.</inlineHelpText>
        <label>Support Designation</label>
        <picklist>
            <picklistValues>
                <fullName>Institutional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio Classical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio News</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Television</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unspecified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-NPR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only NPR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Programming</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suppression_File__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check to indicate if campaign members have been run thru the suppression file</description>
        <inlineHelpText>If the box is checked then the campaign has been run through the suppression file by the vendor or by WGBH Operations, if the box is unchecked please validate if it needs to be run through the suppression file.</inlineHelpText>
        <label>Suppression File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TA_Campaign_Source_Code__c</fullName>
        <description>TA Source code, depicts the Station (WGBH), Activity Type Annual Giving or Planned Giving, Year and Month</description>
        <inlineHelpText>TA and Salesforce Source code field, depicts the Station (WGBH), Activity Type,Giving Type, Year and Month plus Effort</inlineHelpText>
        <label>Campaign Source Code</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TA_Campaign_Source_Code_old__c</fullName>
        <description>TA Source code, depicts the Station (WGBH), Activity Type Annual Giving or Planned Giving, Year and Month</description>
        <label>TA Campaign Source Code_old</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TV_Radio_Show_Program__c</fullName>
        <inlineHelpText>TV/Radio show program code to indicate which program is attached to the sub program or the overall program.  This same program code is used with Cases to track programming issues.</inlineHelpText>
        <label>TV/Radio Show Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Source_Code__c</fullName>
        <label>Test Source Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket_Information__c</fullName>
        <label>Ticket Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ticket_Url__c</fullName>
        <label>Ticket Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Total_Additional_Guests__c</fullName>
        <inlineHelpText>How many additional guests are being brought by guests?</inlineHelpText>
        <label>Total Add. Guests</label>
        <summarizedField>CampaignMember.Additional_Guests__c</summarizedField>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Drop__c</fullName>
        <inlineHelpText>The total number receiving the marketing effort</inlineHelpText>
        <label>Total Drop</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Program_Count__c</fullName>
        <label>Total Program Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ttl_Cost__c</fullName>
        <label>Total Material/Production Costs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Venue_Name__c</fullName>
        <label>Venue Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue_Name_old__c</fullName>
        <label>Venue Name_old</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue_Output__c</fullName>
        <formula>Venue__r.Name &amp; BR() &amp; 
Venue__r.ShippingStreet &amp; BR() &amp; 
Venue__r.ShippingCity &amp; &quot;, &quot; &amp; Venue__r.ShippingState &amp; &quot; &quot; &amp; Venue__r.ShippingPostalCode &amp; BR() &amp; 
&quot;T: &quot; &amp; Venue__r.Phone &amp; 
&quot; F: &quot; &amp; Venue__r.Fax</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Venue Output</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <label>Venue</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WGBH_AUAC__c</fullName>
        <inlineHelpText>When you select the account unit please select a related activity, if this number is unknown please check with your Lawson support person.</inlineHelpText>
        <label>Accounting Unit Activity</label>
        <referenceTo>WGBH_AUAC__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WGBH_Accounting_Unit__c</fullName>
        <inlineHelpText>Select the accounting unit which is related to the financial segment.</inlineHelpText>
        <label>Accounting Unit</label>
        <referenceTo>WGBH_Accounting_Unit__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Web_Inbound__c</fullName>
        <label>Web Inbound</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Web_Launch_Date__c</fullName>
        <inlineHelpText>When will this event launch on KCRW.com and other web sites?</inlineHelpText>
        <label>Web Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zip_Postalcode__c</fullName>
        <label>Zip/Postalcode</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>activity_type__c</fullName>
        <description>Activity Type</description>
        <inlineHelpText>Activity Type</inlineHelpText>
        <label>Activity Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>activity_type_value__c</fullName>
        <label>Activity Type Value</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>campaign_type_value__c</fullName>
        <label>Campaign Type Value</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fiscal_year__c</fullName>
        <description>Fiscal Year</description>
        <inlineHelpText>Fiscal Year</inlineHelpText>
        <label>Fiscal Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>PARENT_NAME</columns>
        <columns>PARENT_ID</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.ID</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.NUM_SENT</columns>
        <columns>CAMPAIGN.NUM_RESPONSES</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>GTR</value>
        </filters>
        <label>All Active Campaigns/Project</label>
    </listViews>
    <listViews>
        <fullName>AllCampaigns</fullName>
        <columns>PARENT_NAME</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>Campaign_Description__c</columns>
        <columns>Campaign_Group__c</columns>
        <columns>Campaign_Name__c</columns>
        <columns>TA_Campaign_Source_Code__c</columns>
        <columns>Campaign_Type__c</columns>
        <columns>Category__c</columns>
        <columns>Channel_Technique__c</columns>
        <filterScope>Mine</filterScope>
        <label>All Campaigns</label>
    </listViews>
    <listViews>
        <fullName>All_Active_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>Campaign_Type__c</columns>
        <columns>TA_Campaign_Source_Code__c</columns>
        <columns>Active__c</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Event_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source_Code__c</field>
            <operation>contains</operation>
            <value>GBHAUG</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>All_Campaigns</fullName>
        <columns>PARENT_NAME</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Source_Code__c</columns>
        <columns>Campaign_Description__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Start_Time_Date__c</columns>
        <columns>End_Time_Date__c</columns>
        <columns>Active__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>HTML_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Campaigns</label>
    </listViews>
    <listViews>
        <fullName>All_LG_Campaigns</fullName>
        <columns>PARENT_NAME</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Source_Code__c</columns>
        <columns>Campaign_Description__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Start_Time_Date__c</columns>
        <columns>End_Time_Date__c</columns>
        <columns>Active__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>HTML_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>contains</operation>
            <value>lynn</value>
        </filters>
        <filters>
            <field>Financial_segment_Level1__c</field>
            <operation>equals</operation>
            <value>Major Gifts</value>
        </filters>
        <label>All LG Campaigns</label>
    </listViews>
    <listViews>
        <fullName>All_Planned_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>Product_Program__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <columns>Campaign_Name__c</columns>
        <columns>Campaign_Description__c</columns>
        <columns>Campaign_Type__c</columns>
        <columns>Category__c</columns>
        <columns>Channel_Technique__c</columns>
        <columns>Source_Code__c</columns>
        <columns>Job__c</columns>
        <columns>Start_Time_Date__c</columns>
        <columns>End_Time_Date__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>equals</operation>
            <value>Planned</value>
        </filters>
        <label>All Planned Campaigns</label>
    </listViews>
</CustomObject>